--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,16 +23,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        ///[FIX#Jitpack#需要Java 11]在项目根目录添加文件jitpack.yml（jdk: - openjdk11）
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
     implementation project(':library')
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
@@ -67,5 +69,5 @@ dependencies {
         exclude group: "com.mikepenz"
     }
 
-    implementation 'com.github.yongtiger:android-Materialize:v1.2.4'
+    implementation 'com.github.yongtiger:android-Materialize:v1.4.0'
 }
